--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,8 @@ body {
     font-weight: bold;
     padding: 10px;
     color: #232322;
+    margin-top: 18px;
+    margin-left: 10px;
 }
 
 .logo {
@@ -53,7 +55,7 @@ body {
     overflow: hidden;
     border: 2px solid #ccc;
     border-radius: 10px;
-    margin-top: -14px;
+    margin-top: -10px;
 }
   .carousel {
     display: flex;
@@ -99,7 +101,7 @@ body {
 
 .head{
     margin-top: 80px;
-    margin-left: 78px;
+    margin-left: 62px;
     color: #232322;
     font-size: 27px;
 }
@@ -111,8 +113,8 @@ body {
     gap: 30px;
     max-width: 1200px;
     width: 100%;
-    padding: 20px;
-    margin-left: 60px;
+    padding: 18px;
+    margin-left: 40px;
 }
 
 .product-card img {
@@ -121,12 +123,79 @@ body {
     transition: transform 0.3s;
 }
 
-.product-card {
-    border-right: 2px solid #ccc;
-    padding: 0px 20px;
-}
-
 
 .product-card img:hover{
     transform: scale(1.05);
 }
+
+.image img{
+    margin-top: 10px;
+}
+
+.image p{
+    font-weight: bold;
+    margin-left: 1000px;
+    margin-top: -650px;
+    font-size: 45px;
+    max-width: 5px;
+    text-align: center;
+    
+}
+
+.container {
+    display: flex;
+    max-width: 1250px;
+    margin-top: 10px;
+
+}
+  
+  .image-section img {
+    width: 800px;
+    height: 790px;
+    object-fit: cover;
+  }
+  
+  .text-section {
+    flex: 1;
+    padding: 40px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    margin-left: 90px;
+    line-height: 1.5;
+    margin-top: -60px;
+  }
+  
+  .text-section h1 {
+    font-size: 2rem;
+    margin-bottom: 1rem;
+  }
+  
+  .text-section p {
+    font-size: 1rem;
+    margin-bottom: 2rem;
+    color: #555;
+  }
+
+  
+  .nav-button {
+    background: none;
+    border: 1px solid #ccc;
+    padding: 10px;
+    cursor: pointer;
+    font-size: 1rem;
+  }
+  
+  
+  .shop-now-button {
+    text-decoration: none;
+    background-color: black;
+    color: white;
+    padding: 10px 20px;
+    font-size: 1rem;
+    text-align: center;
+    border-radius: 5px;
+    display: inline-block;
+  }
+  
