--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,7 @@ body {
   flex-direction: row;
   justify-content: flex-end;
   list-style: none;
+  text-decoration: none;
 }
 
 
@@ -439,5 +440,83 @@ body {
   .review-author p {
     font-size: 14px;
     color: #666;
+}
+
+
+.articles-section {
+    max-width: 1000px;
+    margin: 20px auto;
+    padding: 20px;
   }
+  
+  .section-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
+  }
+  
+  .subtitle {
+    font-size: 14px;
+    color: #777;
+    text-transform: uppercase;
+  }
+  
+  .section-title1 {
+    font-size: 24px;
+    font-weight: bold;
+    text-align: center;
+    margin-top: 120px;
+    margin-left: -90px;
+
+  }
+  
+  .read-all {
+    font-size: 14px;
+    text-transform: uppercase;
+    color: #000;
+    text-decoration: none;
+    font-weight: bold;
+    margin-left: auto;
+    margin-top: 30px;
+  }
+  
+  .articles-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 20px;
+  }
+  
+  .article-card {
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    overflow: hidden;
+    background-color: #f9f9f9;
+  }
+  
+  .article-image {
+    width: 100%;
+    height: 150px;
+    object-fit: cover;
+  }
+  
+  .article-details {
+    padding: 15px;
+  }
+  
+  .article-date {
+    font-size: 12px;
+    color: #666;
+    margin-bottom: 10px;
+  }
+  
+  .article-title {
+    font-size: 16px;
+    color: #333;
+    font-weight: bold;
+    line-height: 1.4;
+  }
+
+
+
 
